# project

./: .gitignore  LICENSE  README.md  launch_all.sh  run.sh
central_control_pkg/: CMakeLists.txt  package.xml
central_control_pkg/launch/: control.launch  multi_control.launch
central_control_pkg/src/: demo_topic_subscriber.cpp  demo_topic_subscriber_multi.cpp
docs/: index.html
docs/css/: style.css
docs/demo1/: index.html
docs/demo1/js/: script.js
docs/js/: script.js
robot_control_pkg/: CMakeLists.txt  package.xml
robot_control_pkg/launch/: keyboard_teleop.launch
robot_control_pkg/scripts/: robot_keyboard.py
robot_converter_pkg/: CMakeLists.txt  package.xml
robot_converter_pkg/launch/: vel_converter.launch
robot_converter_pkg/src/: converter.cpp
robot_description_pkg/: CMakeLists.txt  package.xml
robot_description_pkg/urdf/: diff_wheeled_robot.xacro  diff_wheeled_robot_r1.xacro  diff_wheeled_robot_r1.xacro.bak  diff_wheeled_robot_r1_ns.xacro  diff_wheeled_robot_r2.xacro  diff_wheeled_robot_r2_ns.xacro
robot_navigation_pkg/: CMakeLists.txt  package.xml
robot_navigation_pkg/launch/: amcl.launch  gmapping.launch  multi_navigation.launch
robot_navigation_pkg/launch/includes/: amcl.launch.xml  move_base.launch.xml  move_base1.launch.xml  move_base2.launch.xml
robot_navigation_pkg/maps/: lab.pgm  lab.yaml  maze2.pgm  maze2.yaml  newmaz.pgm  newmaz.yaml
robot_navigation_pkg/param/: dwa_local_planner_params.yaml  global_costmap_params1.yaml  global_costmap_params2.yaml  local_costmap_params1.yaml  local_costmap_params2.yaml
robot_simulation_pkg/: CMakeLists.txt  package.xml
robot_simulation_pkg/launch/: maze_world.launch  simulation.launch  simulation_one_robot.launch
robot_simulation_pkg/world/: maze.world  mazex.world
web_pages/back_end_viewer/: index.html
web_pages/control/: index.html
web_pages/control/js/: script.js
web_pages/demo1/: index.html
zbar_ros_pkg/: CMakeLists.txt  nodelets.xml  package.xml
zbar_ros_pkg/launch/: multi_open_zbar.launch  open_zbar.launch
(+13 files in other folders)
